# branchLM

./: .env.production.example  .gitignore  README.md  docker-compose.yml  netlify.toml  package-lock.json
.github/workflows/: deploy.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  deps.py  main.py  pyproject.toml  schemas.py  settings.py  supabase_schema.sql
api/app/: main.py
api/routers/: backboard.py  chats.py  context_nodes.py  graph.py  health.py  messages.py  workspaces.py
api/services/: backboard_service.py  chat_service.py  context_node_service.py  graph_service.py  llm_service.py  metrics.py  rate_limit.py
api/store/: base.py  memory.py  supabase.py
api/tests/: conftest.py  test_main.py
deploy/: Caddyfile  README.md  deploy.sh
supabase/: config.toml
supabase/migrations/: 20260215200000_init_graphlm.sql  20260307120000_add_chat_models_and_context_snapshots.sql  20260307171343_add_chat_size_columns.sql  20260307214836_add_context_node_tables.sql
web/: .env.example  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/auth/: LandingLogin.tsx
web/src/flow/: actionsContext.tsx  layout.ts  types.ts
web/src/flow/canvas/: Canvas.tsx  CanvasToolbar.tsx  canvasModel.ts  useCanvas.ts
web/src/flow/connections/: connectionsApi.ts  connectionsModel.ts  useConnections.ts
web/src/flow/graph/: graphApi.ts  graphModel.ts  useGraph.ts
web/src/flow/messaging/: messagingApi.ts  messagingModel.ts  useMessaging.ts
web/src/flow/panel/: panelModel.tsx  usePanel.ts
web/src/flow/workspaces/: workspaceApi.ts
web/src/lib/: api.ts  auth.ts
web/src/nodes/: nodeRegistry.ts
web/src/nodes/chat/: ChatCard.tsx  ChatNode.tsx
web/src/nodes/context/: ContextNode.tsx
web/src/nodes/message/: MessageBubble.tsx  MessageNode.tsx
web/src/ui/: ChatPanel.tsx  Composer.tsx  ContextPreviewPanel.tsx  NodeDeleteButton.tsx  Panel.tsx  SendButton.tsx  buttonStyles.ts
