[project]
name = "branchlm-api"
version = "0.1.0"
description = "FastAPI backend for branchLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
